--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,9 @@ phases:
       - env
       - chmod +x ./build-s3-dist.sh && ./build-s3-dist.sh --template-bucket ${TEMPLATE_OUTPUT_BUCKET} --code-bucket ${DIST_OUTPUT_BUCKET} --version ${VERSION} --region ${AWS_REGION} --solution-name ${SOLUTION_NAME}  --use_solution_builder_pipeline
       - echo "Build completed `date`"
-      - echo "Test open source"
+      - echo "Creating open-source-dir `date` in `pwd`"
+      - chmod +x ./add-open-source-dir.sh && ./add-open-source-dir.sh
+      - echo "Open Source Dir completed `date`"
   post_build:
     commands:
       - echo "Retrieving next stage buildspec `date` in `pwd`"
